--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
     "cSpell.words": [
+        "buildify",
+        "Buildify",
+        "Buildify's",
         "Nyasha",
         "Svetlana",
         "Udemy",
-        "Ushewokunze"
+        "Ushewokunze",
+        "wireframe",
+        "Wireframe"
     ]
 }
